# Catozzo

./: .gitignore  CMakeLists.txt  README.md  build.bat
qml/: Main.qml
qml/components/: ClipList.qml  ClipRow.qml  SettingsBar.qml  Toolbar.qml
src/: ClipScanner.cpp  ClipScanner.h  FfmpegRunner.cpp  FfmpegRunner.h  ProjectModel.cpp  ProjectModel.h  main.cpp
